2004-01-22  Scott Dattalo  <scott@dattalo.com>
	* gui/gui*.cc: converted the cross_reference_to_gui structure
	into the CrossReferenceToGUI class.
	* src/pir.h: fixed default names of the PIR registers
	* regression/p16f873/p16f873.asm: added
	
2004-01-20  Scott Dattalo  <scott@dattalo.com>
	* gui/gui_regwin.cc, gui/gui_src_asm.cc, gui_watch.cc:
	  Changed gpsim_* api calls to their direct counterparts
	* src/interface.cc, src/interface.h:
	  Removed obsolete API's
	* src/breakpoints.cc (clear_all_register): added
	* cli/input.cc: fixed memory leak.
	* doc/gpsim.lyx: updated documentation with recent CLI changes

2004-01-18  Borut Razem  <borut.razem@siol.net>
	* configure.in: added --enable-gtk2 configure command line option for
	  linking with GTK+ 2.x

2004-01-17  Borut Razem  <borut.razem@siol.net>
	Update to GTK+ 2.x:
	* config_win32.h.in: version 0.21.1, updated #defines
	* cli/cmd_load.cc, cli/input.cc, cli/input.h:
	  char * replaced with const char *,
	  removed unneeded #include <sys/errno.h>
	* gui/gui.h, gui/gui_breadboard.cc, gui/gui_break.cc,
	  gui/gui_dialog.cc, gui/gui_menu.cc,gui/gui_object.cc,
	  gui/gui_profile.cc, gui/gui_regwin.cc, gui\gui_src.cc,
	  gui/gui_src_asm.cc, gui/gui_src_opcode.cc, gui/gui_stack.cc,
	  gui/gui_statusbar.cc, gui/gui_stopwatch.cc, gui/gui_symbols.cc,
	  gui/gui_trace.cc, gui/gui_watch.cc:
	  char * replaced with const char *,
	  GdkFont replaced with PangoFontDescription,
	  GtkStyle replaced with GtkStyle *,
	  #define GTK_ENABLE_BROKEN,
	  #include <sys/errno.h> replaced with #include <errno.h>,
	  update for GTK+ 2.x
	* src/cod.cc, src/interface.cc, src/interface.h, src/modules.cc,
	  src/modules.h, src/p16x5x.cc, src/pic-processor.cc,
	  src/pic-processor.h, src/processor.h, src/stimuli.cc, src/stimuli.h,
	  src/symbol.cc, src/symbol.h, src/trace.cc, src/trace.h:
	  char * replaced with const char *,
	  __PRETTY_FUNCTION__ replaced with __FUNCTION__
	* modules/binary_indicator.cc, modules/binary_indicator.h,