@@ -112,5 +112,5 @@ gpsiminclude_HEADERS = \
 
 
 #libgpsim_la_LDFLAGS = $(shell gtk-config --libs)
-libgpsim_la_LDFLAGS =  @X_LDFLAGS@
+libgpsim_la_LDFLAGS =  @X_LDFLAGS@ 
 
